# donkeykong

./: .gitignore  CITATION.cff  README.md  SECURITY.md  __init__.py  donkeykong-RESEARCH.md  pyproject.toml
.github/ISSUE_TEMPLATE/: validator-false-positive.md
core/: monitor.py  worker.py
docs/: CONFERENCE_SUBMISSIONS.md  CONTRIBUTING.md  HISTORY.md  X_THREAD.md
examples/wikipedia_quality/: Dockerfile  README.md  articles.txt  benchmark.py  benchmark_results.json  docker-compose.yml  worker.py
interfaces/cli/: main.py
interfaces/mcp/: server.py
interfaces/python/: api.py
kong/: adversarial.py  validator.py
tests/: __init__.py  test_adversarial.py
