[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "donkeykong"
version = "0.1.0"
description = "Distributed Collection, Local Intelligence - Data pipelines with local LLM validation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gaurav Rastogi", email = "rustey@gmail.com"}
]
keywords = [
    "distributed",
    "data-collection", 
    "llm",
    "ollama",
    "docker",
    "redis",
    "etl",
    "scraping",
    "validation",
    "mcp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.9"
dependencies = [
    "redis>=4.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.1.0"]
mcp = ["mcp>=0.1.0"]
full = [
    "ollama>=0.1.0",
    "mcp>=0.1.0",
    "beautifulsoup4>=4.12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[project.scripts]
dk = "donkeykong.interfaces.cli.main:main"

[project.urls]
Homepage = "https://github.com/ekras-doloop/donkeykong"
Documentation = "https://github.com/ekras-doloop/donkeykong#readme"
Repository = "https://github.com/ekras-doloop/donkeykong"
Issues = "https://github.com/ekras-doloop/donkeykong/issues"

[tool.setuptools.packages.find]
include = ["donkeykong*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
